# lazydb

./: Cargo.toml  README.md  config.yml.example  connections.yml.example
.github/workflows/: homebrew.yml  release.yml
src/: main.rs
src/config/: config.rs  connections.rs  mod.rs
src/db/: adapter.rs  mod.rs  mysql.rs  postgres.rs  redis.rs  sqlite.rs  tests.rs
src/export/: mod.rs  tests.rs
src/history/: mod.rs  tests.rs
src/session/: mod.rs  tests.rs
src/tui/: cc_edit.rs  editor.rs  help.rs  layout.rs  mod.rs  picker.rs  results.rs  schema.rs  scrollable.rs  tab_tests.rs
src/tui/editor/: mod.rs  operators.rs  render.rs  search.rs  state.rs  tests.rs  visual.rs  word.rs
src/tunnel/: mod.rs  ssh.rs  ssm.rs
