[package]
name = "lazydb"
version = "0.1.0"
edition = "2021"
description = "A standalone TUI SQL client"
license = "MIT"

[[bin]]
name = "lazydb"
path = "src/main.rs"

[dependencies]
ratatui      = "0.29"
crossterm    = "0.28"
tokio        = { version = "1", features = ["full"] }
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
serde_yaml   = "0.9"
clap         = { version = "4", features = ["derive"] }
arboard      = "3"
anyhow       = "1"
uuid         = { version = "1", features = ["v4"] }
unicode-width = "0.1"
csv          = "1"
rpassword    = "7"
chrono       = { version = "0.4", features = ["serde"] }
dirs         = "5"
keyring      = "3"
sqlx         = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "mysql"] }
urlencoding  = "2"
sqlformat    = "0.3"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
