[package]
name = "lazydb"
version = "0.2.6"
edition = "2021"
description = "A standalone TUI SQL client"
license = "MIT"
homepage = "https://github.com/takuyatechexpert/lazydb"
repository = "https://github.com/takuyatechexpert/lazydb"

[[bin]]
name = "lazydb"
path = "src/main.rs"

[dependencies]
ratatui      = "0.29"
crossterm    = "0.28"
tokio        = { version = "1", features = ["full"] }
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
serde_yaml   = "0.9"
clap         = { version = "4", features = ["derive"] }
arboard      = "3"
anyhow       = "1"
uuid         = { version = "1", features = ["v4"] }
unicode-width = "0.1"
csv          = "1"
rpassword    = "7"
chrono       = { version = "0.4", features = ["serde"] }
dirs         = "5"
keyring      = "3"
sqlx         = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "mysql", "sqlite", "chrono", "uuid", "json", "bigdecimal"] }
redis        = { version = "0.27", features = ["tokio-comp", "aio"] }
urlencoding  = "2"
sqlformat    = "0.3"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

# Config for 'dist'
[workspace.metadata.dist]
# The preferred dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.31.0"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["homebrew"]
# A GitHub repo to push Homebrew formulas to
tap = "takuyatechexpert/homebrew-tap"
# Publish jobs to run in CI
publish-jobs = ["homebrew"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "aarch64-unknown-linux-gnu", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu"]
# Which actions to run on pull requests
pr-run-mode = "plan"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
